Added JavaDOC and UnitTesting with Mocking Also did a lot of code quality modifications using SonarLint's suggestions